--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/classwork2.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css">
+    <link rel="stylesheet" href="classwork2.css">
+    <link rel="stylesheet" href="fontawesome-free-6.1.2-web/css/all.min.css">
 </head>
 <header>
     <nav>
@@ -45,7 +45,7 @@
    </section>
    <section class="b2">
     <div class="b21">
-        <img src="/edgeledger/pics2.jpg" width="900px" height="700px" >
+        <img src="edgeledger/pics2.jpg" width="900px" height="700px" >
     </div>
     <div class="b22">
         <h3>What are you looking for?</h3>
@@ -61,16 +61,16 @@
    </section>
    <section class="b4">
     <div class="b4a">
-        <div class="b4a1"><img src="/edgeledger/p31.jpg" width="450px" height="300px"></div>
-        <div class="b4a1"><img src="/edgeledger/p32.jpg" width="450px" height="300px"></div>
-        <div class="b4a1"><img src="/edgeledger/p33.jpg" width="450px" height="300px"></div>
-        <div class="b4a1"><img src="/edgeledger/p34.jpg" width="450px" height="300px"></div>
+        <div class="b4a1"><img src="edgeledger/p31.jpg" width="450px" height="300px"></div>
+        <div class="b4a1"><img src="edgeledger/p32.jpg" width="450px" height="300px"></div>
+        <div class="b4a1"><img src="edgeledger/p33.jpg" width="450px" height="300px"></div>
+        <div class="b4a1"><img src="edgeledger/p34.jpg" width="450px" height="300px"></div>
     </div>
     <div class="b4b">
-        <div class="b4b1"><img src="/edgeledger/p41.jpg" width="450px" height="300px"></div>
-        <div class="b4b1"><img src="/edgeledger/p42.jpg" width="450px" height="300px"></div>
-        <div class="b4b1"><img src="/edgeledger/p43.jpg" width="450px" height="300px"></div>
-        <div class="b4b1"><img src="/edgeledger/p44.jpg" width="450px" height="300px"></div>
+        <div class="b4b1"><img src="edgeledger/p41.jpg" width="450px" height="300px"></div>
+        <div class="b4b1"><img src="edgeledger/p42.jpg" width="450px" height="300px"></div>
+        <div class="b4b1"><img src="edgeledger/p43.jpg" width="450px" height="300px"></div>
+        <div class="b4b1"><img src="edgeledger/p44.jpg" width="450px" height="300px"></div>
     </div>
    </section>
    <section class="b5" id="b5">
@@ -81,7 +81,7 @@
         <p class="btn3"><a href="#"><i class="fa-solid fa-angle-right"></i> Read More</a></p>
     </div>
     <div class="b51">
-        <img src="/edgeledger/blog.jpg" width="1000px" height="650px">
+        <img src="edgeledger/blog.jpg" width="1000px" height="650px">
     </div>
    </section>
    <section class="b6">
@@ -91,24 +91,24 @@
 </section>
 <section class="b7">
     <div class="b71">
-        <img class="b72" src="/edgeledger/p1.jpg" width="600px" height="400px">
+        <img class="b72" src="edgeledger/p1.jpg" width="600px" height="400px">
         <h4>Richard Pound</h4>
         <p>President</p>
     </div>
     <div class="b71">
-        <img class="b72" src="/edgeledger/p62.jpg" width="600px" height="400px">
+        <img class="b72" src="edgeledger/p62.jpg" width="600px" height="400px">
         <h4>Marie Shwaigert</h4>
         <p>Vice President</p>
     </div>
     <div class="b71">
-        <img class="b72"src="/edgeledger/p63.jpg" width="600px" height="400px">
+        <img class="b72"src="edgeledger/p63.jpg" width="600px" height="400px">
         <h4>Terry Fuentes</h4>
         <p>Chief Executive Officer</p>
     </div>
 </section>
 <section class="b8" id="b8" >
     <div class="b81">
-        <img src="/edgeledger/p7.jpg" width="1000px" height="100%">
+        <img src="edgeledger/p7.jpg" width="1000px" height="100%">
     </div>
     <div class="b82" >
     <form >
